# summarizer

./: Dockerfile  main.py  pyproject.toml
