[tool.poetry]
name = "pdf-summarizer"
version = "0.1.0"
description = ""
authors = ["Jessica Tam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.5.0"
openai = "^1.3.5"
pypdf = "^3.17.1"
tiktoken = "^0.5.1"
langchain = "^0.0.339"

[tool.poetry.group.dev.dependencies]
black = "*"


[tool.black]
line-length = 100
target-version = ['py310']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
